--- a/src/components/Scoreboard/Scoreboard.module.css
+++ b/src/components/Scoreboard/Scoreboard.module.css
@@ -1,10 +1,3 @@
-.scoreboard_container table {
-  text-align: center;
-  border-collapse: separate; /* Allows spacing between columns */
-  width: 100vw;
-  margin-top: 2em;
-}
-
 .scoreboard_container table td {
   font-size: 2em;
   padding: 0.3em;
@@ -12,11 +5,12 @@
 
 .scoreboard_container table th {
   font-size: 2.5em;
+  padding: 0.3em;
 }
 
-.total_score_container {
-  border-bottom: 2px dashed var(--text-color);
-  width: 100%;
-  padding-bottom: 30px;
-  margin: 0 auto;
+.scoreboard_container table {
+  width: 50vw;
+  text-align: center;
+  border-collapse: separate;
+  margin-top: 2em;
 }
